--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Dashboard app with tied-in apps.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js \"npm start\"",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,6 +33,7 @@
     "express": "^4.16.4",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
+    "react": "^16.8.6",
     "sequelize": "^5.2.8",
     "sequelize-cli": "^5.4.0"
   }
