--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "axios": "^0.18.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "firebase": "^6.3.4",
+    "firebase-admin": "^8.3.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "react": "^16.8.6",
